--- a/staff.html
+++ b/staff.html
@@ -32,9 +32,42 @@
       font-size: 16px;
       color: #ccc;
     }
+    #authOverlay {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background-color: black;
+      color: white;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+    }
+    #authOverlay input {
+      padding: 10px;
+      font-size: 16px;
+      border-radius: 5px;
+      border: none;
+    }
+    #authOverlay button {
+      margin-top: 10px;
+    }
+    #errorMsg {
+      color: red;
+      margin-top: 10px;
+    }
   </style>
 </head>
 <body>
+  <div id="authOverlay">
+    <h2>🔒 Accès réservé</h2>
+    <p>Veuillez entrer le mot de passe pour accéder au contrôle du spectacle :</p>
+    <input type="password" id="passwordInput" placeholder="Mot de passe">
+    <button onclick="checkPassword()">Valider</button>
+    <p id="errorMsg"></p>
+  </div>
+
   <h1>Staff : Contrôle du spectacle 🎬</h1>
   <button onclick="startShow()">🎧 Lancer le spectacle</button>
   <button onclick="resetShow()">🛑 Réinitialiser</button>
@@ -48,6 +81,16 @@
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 
   <script>
+    function checkPassword() {
+      const input = document.getElementById("passwordInput").value;
+      const errorMsg = document.getElementById("errorMsg");
+      if (input === "Tinel") {
+        document.getElementById("authOverlay").style.display = "none";
+      } else {
+        errorMsg.textContent = "Mot de passe incorrect.";
+      }
+    }
+
     const firebaseConfig = {
       apiKey: "AIzaSyAibnn8YMMiEM0mJfOQRJ_8taGZ4IqbvXR0",
       authDomain: "audiominecraftentertainment.firebaseapp.com",
@@ -64,7 +107,7 @@
     const viewerCountDiv = document.getElementById("viewerCount");
 
     let intervalId = null;
-    let audioDuration = 180; // valeur par défaut
+    let audioDuration = 180;
 
     function startShow() {
       const timestamp = Date.now();
