--- a/staff.html
+++ b/staff.html
@@ -79,8 +79,14 @@
 
   <label for="spectacleSelect">🎭 Choisissez un spectacle :</label>
   <select id="spectacleSelect">
-    <option value="spectacle.mp3">Alice & La Reine de Coeur</option>
-    <option value="Là-Haut.mp3">Là-Haut</option>
+<option value="spectacle.mp3">Alice & La Reine de Coeur</option>
+  <option value="Là-Haut.mp3">Là-Haut</option>
+  <option value="Monstre & Cie.mp3">Monstre & Cie</option>
+  <option value="Elementaire.mp3">Elementaire</option>
+  <option value="Toy Story.mp3">Toy Story</option>
+  <option value="Nemo.mp3">Nemo</option>
+  <option value="Ratatouille.mp3">Ratatouille</option>
+  <option value="Vice-Versa.mp3">Vice-Versa</option>
   </select>
 
   <br><br>
