--- a/staff.html
+++ b/staff.html
@@ -79,14 +79,14 @@
 
   <label for="spectacleSelect">🎭 Choisissez un spectacle :</label>
   <select id="spectacleSelect">
-<option value="spectacle.mp3">Alice & La Reine de Coeur</option>
-  <option value="Là-Haut.mp3">Là-Haut</option>
-  <option value="Monstre & Cie.mp3">Monstre & Cie</option>
-  <option value="Elementaire.mp3">Elementaire</option>
-  <option value="Toy Story.mp3">Toy Story</option>
-  <option value="Nemo.mp3">Nemo</option>
-  <option value="Ratatouille.mp3">Ratatouille</option>
-  <option value="Vice-Versa.mp3">Vice-Versa</option>
+    <option value="spectacle.mp3">Alice & La Reine de Coeur</option>
+    <option value="Là-Haut.mp3">Là-Haut</option>
+    <option value="Monstre & Cie.mp3">Monstre & Cie</option>
+    <option value="Elementaire.mp3">Elementaire</option>
+    <option value="Toy Story.mp3">Toy Story</option>
+    <option value="Nemo.mp3">Nemo</option>
+    <option value="Ratatouille.mp3">Ratatouille</option>
+    <option value="Vice-Versa.mp3">Vice-Versa</option>
   </select>
 
   <br><br>
@@ -136,12 +136,14 @@
       const timestamp = Date.now();
       const selectedAudio = document.getElementById("spectacleSelect").value;
 
+      // ✅ Affiche l'alerte immédiatement au clic
+      alert(`Spectacle lancé 🎉\nAudio : ${selectedAudio}`);
+
       db.ref("show").set({
         startTime: timestamp,
         audioFile: selectedAudio
       })
       .then(() => {
-        alert(`Spectacle lancé 🎉\nAudio : ${selectedAudio}`);
         updateProgress(timestamp);
       })
       .catch((error) => {
@@ -230,8 +232,4 @@
     db.ref("viewers").on("value", (snapshot) => {
       const viewers = snapshot.val();
       const count = viewers ? Object.keys(viewers).length : 0;
-      viewerCountDiv.textContent = `👥 Spectateurs connectés : ${count}`;
-    });
-  </script>
-</body>
-</html>
+      viewerCountDiv.textContent = `
