--- a/staff.html
+++ b/staff.html
@@ -136,7 +136,6 @@
       const timestamp = Date.now();
       const selectedAudio = document.getElementById("spectacleSelect").value;
 
-      // ✅ Affiche l'alerte immédiatement au clic
       alert(`Spectacle lancé 🎉\nAudio : ${selectedAudio}`);
 
       db.ref("show").set({
@@ -232,4 +231,8 @@
     db.ref("viewers").on("value", (snapshot) => {
       const viewers = snapshot.val();
       const count = viewers ? Object.keys(viewers).length : 0;
-      viewerCountDiv.textContent = `
+      viewerCountDiv.textContent = `👥 Spectateurs connectés : ${count}`;
+    });
+  </script>
+</body>
+</html>
