--- a/staff.html
+++ b/staff.html
@@ -87,6 +87,7 @@
     <option value="Nemo.mp3">Nemo</option>
     <option value="Ratatouille.mp3">Ratatouille</option>
     <option value="Vice-Versa.mp3">Vice-Versa</option>
+    <option value="Luca.mp3">Luca</option>
   </select>
 
   <br><br>
