--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
     const status = document.getElementById("status");
     const volumeSlider = document.getElementById("volumeSlider");
 
+    const currentPage = "guest"; // 🔒 Cible définie pour cette page
+
     let audioEnabled = false;
     let pendingStartTime = null;
 
@@ -150,7 +152,6 @@
     enableBtn.addEventListener("click", () => {
       audioEnabled = true;
 
-      // 🔊 Réglage automatique du volume à 15 %
       volumeSlider.value = 0.15;
       audio.volume = 0.15;
       waitingAudio.volume = 0.15;
@@ -188,7 +189,7 @@
 
     firebase.database().ref("show").on("value", (snapshot) => {
       const data = snapshot.val();
-      if (data && data.startTime) {
+      if (data && data.startTime && data.targetPage === currentPage) {
         pendingStartTime = data.startTime;
 
         if (data.audioFile) {
@@ -203,7 +204,7 @@
       } else {
         audio.pause();
         status.style.display = "none";
-        console.log("Spectacle interrompu par le staff");
+        console.log("Spectacle ignoré ou interrompu (cible différente ou vide)");
       }
     });
 
